--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>Copyright | Church-App</title>
+
+  <!-- HTML Meta Tags -->
+  <meta name="description" content="Copyrights web-app es una inicativa de nuestra iglesia Tucson Northwest de la Iglesia Adventista del Séptimo Día, con el objetivo de identificar que videos tienen copyrights para no agregarlos a nuestra transmisión.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://copyright-check-app.vercel.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Copyright | Church-App">
+  <meta property="og:description" content="Copyrights web-app es una inicativa de nuestra iglesia Tucson Northwest de la Iglesia Adventista del Séptimo Día, con el objetivo de identificar que videos tienen copyrights para no agregarlos a nuestra transmisión.">
+  <meta property="og:image" content="assets/preview.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="copyright-check-app.vercel.app">
+  <meta property="twitter:url" content="https://copyright-check-app.vercel.app/">
+  <meta name="twitter:title" content="Copyright | Church-App">
+  <meta name="twitter:description" content="Copyrights web-app es una inicativa de nuestra iglesia Tucson Northwest de la Iglesia Adventista del Séptimo Día, con el objetivo de identificar que videos tienen copyrights para no agregarlos a nuestra transmisión.">
+  <meta name="twitter:image" content="assets/preview.jpg">
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
